--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "worldwide-teddy",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -16,8 +15,374 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import os\n",
+    "import glob\n",
+    "import zipfile\n",
+    "import requests\n",
+    "from urllib.request import urlretrieve\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "from memory_profiler import memory_usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\szyan\\miniconda3\\envs\\525\\lib\\site-packages\\rpy2\\robjects\\packages.py:366: UserWarning: The symbol 'quartz' is not in this R namespace/package.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext rpy2.ipython\n",
+    "%load_ext memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article_id = 14096681\n",
+    "url = f\"https://api.figshare.com/v2/articles/{article_id}\"\n",
+    "headers = {\"Content-Type\": \"application/json\"}\n",
+    "output_directory = \"figshareairline/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'is_link_only': False,\n",
+       "  'name': 'daily_rainfall_2014.png',\n",
+       "  'supplied_md5': 'fd32a2ffde300a31f8d63b1825d47e5e',\n",
+       "  'computed_md5': 'fd32a2ffde300a31f8d63b1825d47e5e',\n",
+       "  'id': 26579150,\n",
+       "  'download_url': 'https://ndownloader.figshare.com/files/26579150',\n",
+       "  'size': 58863},\n",
+       " {'is_link_only': False,\n",
+       "  'name': 'environment.yml',\n",
+       "  'supplied_md5': '060b2020017eed93a1ee7dd8c65b2f34',\n",
+       "  'computed_md5': '060b2020017eed93a1ee7dd8c65b2f34',\n",
+       "  'id': 26579171,\n",
+       "  'download_url': 'https://ndownloader.figshare.com/files/26579171',\n",
+       "  'size': 192},\n",
+       " {'is_link_only': False,\n",
+       "  'name': 'README.md',\n",
+       "  'supplied_md5': '61858c6cc0e6a6d6663a7e4c75bbd88c',\n",
+       "  'computed_md5': '61858c6cc0e6a6d6663a7e4c75bbd88c',\n",
+       "  'id': 26586554,\n",
+       "  'download_url': 'https://ndownloader.figshare.com/files/26586554',\n",
+       "  'size': 5422},\n",
+       " {'is_link_only': False,\n",
+       "  'name': 'data.zip',\n",
+       "  'supplied_md5': 'b517383f76e77bd03755a63a8ff83ee9',\n",
+       "  'computed_md5': 'b517383f76e77bd03755a63a8ff83ee9',\n",
+       "  'id': 26766812,\n",
+       "  'download_url': 'https://ndownloader.figshare.com/files/26766812',\n",
+       "  'size': 814041183},\n",
+       " {'is_link_only': False,\n",
+       "  'name': 'get_data.py',\n",
+       "  'supplied_md5': '7829028495fd9dec9680ea013474afa6',\n",
+       "  'computed_md5': '7829028495fd9dec9680ea013474afa6',\n",
+       "  'id': 26766815,\n",
+       "  'download_url': 'https://ndownloader.figshare.com/files/26766815',\n",
+       "  'size': 4113}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.request(\"GET\", url, headers=headers)\n",
+    "data = json.loads(response.text)\n",
+    "files = data[\"files\"]\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 34.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "files_to_dl = [\"data.zip\"]\n",
+    "for file in files:\n",
+    "    if file[\"name\"] in files_to_dl:\n",
+    "        os.makedirs(output_directory, exist_ok=True)\n",
+    "        urlretrieve(file[\"download_url\"], output_directory + file[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 17.8 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with zipfile.ZipFile(os.path.join(output_directory, \"data.zip\"), 'r') as f:\n",
+    "    f.extractall(output_directory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combining data CSVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "files = glob.glob('figshareairline/*.csv')\n",
+    "if 'figshareairline\\\\combined_data.csv' in (files):\n",
+    "    files.remove('figshareairline\\\\combined_data.csv')\n",
+    "del files[-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 110.30 MiB, increment: 0.51 MiB\n",
+      "Wall time: 6min 10s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%memit\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.concat((pd.read_csv(file)\n",
+    "                .assign(model=re.findall(r'[^\\\\/]+(?=_daily_rainfall_NSW)', file)[0])\n",
+    "                for file in files)\n",
+    "              )\n",
+    "df.to_csv(\"figshareairline/combined_data.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.7G\tfigshareairline/combined_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "du -sh figshareairline/combined_data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 53.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df = pd.read_csv(\"figshareairline/combined_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(62467843, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>lat_min</th>\n",
+       "      <th>lat_max</th>\n",
+       "      <th>lon_min</th>\n",
+       "      <th>lon_max</th>\n",
+       "      <th>rain (mm/day)</th>\n",
+       "      <th>model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1889-01-01 12:00:00</td>\n",
+       "      <td>-36.25</td>\n",
+       "      <td>-35.0</td>\n",
+       "      <td>140.625</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>3.293256e-13</td>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1889-01-02 12:00:00</td>\n",
+       "      <td>-36.25</td>\n",
+       "      <td>-35.0</td>\n",
+       "      <td>140.625</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1889-01-03 12:00:00</td>\n",
+       "      <td>-36.25</td>\n",
+       "      <td>-35.0</td>\n",
+       "      <td>140.625</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1889-01-04 12:00:00</td>\n",
+       "      <td>-36.25</td>\n",
+       "      <td>-35.0</td>\n",
+       "      <td>140.625</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1889-01-05 12:00:00</td>\n",
+       "      <td>-36.25</td>\n",
+       "      <td>-35.0</td>\n",
+       "      <td>140.625</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>1.047658e-02</td>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time  lat_min  lat_max  lon_min  lon_max  rain (mm/day)  \\\n",
+       "0  1889-01-01 12:00:00   -36.25    -35.0  140.625    142.5   3.293256e-13   \n",
+       "1  1889-01-02 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
+       "2  1889-01-03 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
+       "3  1889-01-04 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
+       "4  1889-01-05 12:00:00   -36.25    -35.0  140.625    142.5   1.047658e-02   \n",
+       "\n",
+       "        model  \n",
+       "0  ACCESS-CM2  \n",
+       "1  ACCESS-CM2  \n",
+       "2  ACCESS-CM2  \n",
+       "3  ACCESS-CM2  \n",
+       "4  ACCESS-CM2  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cathedral-methodology",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,9 +390,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dsci573env]",
+   "display_name": "Python [conda env:525]",
    "language": "python",
-   "name": "conda-env-dsci573env-py"
+   "name": "conda-env-525-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -39,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
