Rerun download and combine for comparison

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "communist-chinese",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "comfortable-piece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,24 +35,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "swedish-infrared",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\szyan\\miniconda3\\envs\\525\\lib\\site-packages\\rpy2\\robjects\\packages.py:366: UserWarning: The symbol 'quartz' is not in this R namespace/package.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext rpy2.ipython\n",
+    "#%load_ext rpy2.ipython\n",
     "%load_ext memory_profiler"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "useful-triple",
    "metadata": {},
    "source": [
     "## Downloading the data"
@@ -59,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "proved-hanging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "polish-invitation",
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "italian-durham",
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "conservative-start",
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +167,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "political-director",
    "metadata": {},
    "source": [
     "# Combining data CSVs"
@@ -175,7 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "expired-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,15 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
+   "id": "crucial-designer",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 110.30 MiB, increment: 0.51 MiB\n",
-      "Wall time: 6min 10s\n"
+      "peak memory: 87.02 MiB, increment: 0.26 MiB\n",
+      "Wall time: 8min 21s\n"
      ]
     }
    ],
@@ -214,7 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
+   "id": "narrow-planner",
    "metadata": {},
    "outputs": [
     {
@@ -232,14 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "developmental-trunk",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 53.6 s\n"
+      "Wall time: 1min 44s\n"
      ]
     }
    ],
@@ -250,7 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "id": "likely-throw",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "multiple-competition",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +377,7 @@
        "4  ACCESS-CM2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "boxed-suggestion",
    "metadata": {},
    "outputs": [],
    "source": []
