Add comparison table on runtime and memory usage, pending further results and comments

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "communist-chinese",
+   "id": "usual-wichita",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "comfortable-piece",
+   "id": "earlier-guitar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "swedish-infrared",
+   "id": "metallic-potential",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "useful-triple",
+   "id": "wrapped-treasure",
    "metadata": {},
    "source": [
     "## Downloading the data"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "proved-hanging",
+   "id": "muslim-singer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "polish-invitation",
+   "id": "nasty-bruce",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "italian-durham",
+   "id": "improved-roller",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "conservative-start",
+   "id": "thorough-first",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-director",
+   "id": "meaning-wrapping",
    "metadata": {},
    "source": [
     "# Combining data CSVs"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "expired-armenia",
+   "id": "invisible-blair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "crucial-designer",
+   "id": "independent-upset",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "narrow-planner",
+   "id": "maritime-protocol",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "developmental-trunk",
+   "id": "conservative-nashville",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "likely-throw",
+   "id": "entire-reduction",
    "metadata": {},
    "outputs": [
     {
@@ -273,8 +273,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "multiple-competition",
-   "metadata": {},
+   "id": "valuable-consolidation",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -387,9 +389,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "binding-albany",
+   "metadata": {},
+   "source": [
+    "**Comparison in run times and memory usages on different machines**\n",
+    "\n",
+    "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (Windows 16Gb RAM) |Rahul (Windows 16Gb RAM) \n",
+    "---|---|---|---|---\n",
+    "Download data - wall timne| 34.1s | 12min 38s\n",
+    "Unzip data - wall time| 17.8s| 25.5s \n",
+    "Combine data - wall time| 6min 10s| 8 mins 21s\n",
+    "Combine data - peak memory | 110.30 MiB| 87.02 MiB\n",
+    "Read combined data - wall time | 53.6s | 1min 44s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "virtual-organization",
+   "metadata": {},
+   "source": [
+    "**Comment:**\n",
+    "\n",
+    "- Peter's machine can run the task well and faster than Alex's given the bigger RAM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boxed-suggestion",
+   "id": "negative-syntax",
    "metadata": {},
    "outputs": [],
    "source": []
