minor edit of README.md and add comment in code on why we do not use use_cols

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "usual-wichita",
+   "id": "athletic-newark",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "earlier-guitar",
+   "id": "happy-excellence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "metallic-potential",
+   "id": "frank-luxury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-treasure",
+   "id": "stopped-savings",
    "metadata": {},
    "source": [
     "## Downloading the data"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "muslim-singer",
+   "id": "persistent-elements",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "nasty-bruce",
+   "id": "going-proxy",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "improved-roller",
+   "id": "excess-skill",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "thorough-first",
+   "id": "integrated-wireless",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaning-wrapping",
+   "id": "previous-acrobat",
    "metadata": {},
    "source": [
     "# Combining data CSVs"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "invisible-blair",
+   "id": "enhanced-logic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "independent-upset",
+   "id": "protective-symposium",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
     "%%time\n",
     "%memit\n",
     "\n",
-    "import pandas as pd\n",
+    "import pandas as pd # we do not use use_cols trick because we are loading all columns in the file\n",
     "df = pd.concat((pd.read_csv(file)\n",
     "                .assign(model=re.findall(r'[^\\\\/]+(?=_daily_rainfall_NSW)', file)[0])\n",
     "                for file in files)\n",
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "maritime-protocol",
+   "id": "prostate-progress",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "conservative-nashville",
+   "id": "received-practice",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "entire-reduction",
+   "id": "optical-listening",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "valuable-consolidation",
+   "id": "sealed-benefit",
    "metadata": {
     "tags": []
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-albany",
+   "id": "living-burner",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-organization",
+   "id": "boolean-madison",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "negative-syntax",
+   "id": "decreased-dylan",
    "metadata": {},
    "outputs": [],
    "source": []
