--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "athletic-newark",
+   "id": "above-illustration",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "happy-excellence",
+   "id": "faced-crack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "frank-luxury",
+   "execution_count": 10,
+   "id": "sapphire-blues",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The memory_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext memory_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "#%load_ext rpy2.ipython\n",
     "%load_ext memory_profiler"
@@ -45,16 +54,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-savings",
+   "id": "funded-porter",
    "metadata": {},
    "source": [
-    "## Downloading the data"
+    "## A) Downloading the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "persistent-elements",
+   "id": "political-september",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "going-proxy",
+   "id": "challenging-procurement",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "excess-skill",
+   "id": "little-fabric",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "integrated-wireless",
+   "id": "considered-novelty",
    "metadata": {},
    "outputs": [
     {
@@ -167,16 +176,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "previous-acrobat",
+   "id": "sixth-secretary",
    "metadata": {},
    "source": [
-    "# Combining data CSVs"
+    "## B) Combining data CSVs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "enhanced-logic",
+   "id": "saved-proportion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protective-symposium",
+   "id": "written-horror",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prostate-progress",
+   "id": "changed-catch",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "received-practice",
+   "id": "technological-imaging",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "optical-listening",
+   "id": "greek-passing",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sealed-benefit",
+   "id": "weekly-christmas",
    "metadata": {
     "tags": []
    },
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-burner",
+   "id": "smaller-advancement",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -406,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-madison",
+   "id": "rental-gilbert",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -415,9 +424,344 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "musical-conducting",
+   "metadata": {},
+   "source": [
+    "## C) Load combined CSV to memory and perform a simple EDA in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "announced-disease",
+   "metadata": {},
+   "source": [
+    "### 1. How many records in each type of model?\n",
+    "#### 1.1. Classical way - load all to memory (for comparison later)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "massive-investigator",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MPI-ESM1-2-HR       5154240\n",
+      "CMCC-ESM2           3541230\n",
+      "CMCC-CM2-HR4        3541230\n",
+      "TaiESM1             3541230\n",
+      "CMCC-CM2-SR5        3541230\n",
+      "NorESM2-MM          3541230\n",
+      "SAM0-UNICON         3541153\n",
+      "FGOALS-f3-L         3219300\n",
+      "GFDL-ESM4           3219300\n",
+      "GFDL-CM4            3219300\n",
+      "MRI-ESM2-0          3037320\n",
+      "EC-Earth3-Veg-LR    3037320\n",
+      "BCC-CSM2-MR         3035340\n",
+      "MIROC6              2070900\n",
+      "ACCESS-CM2          1932840\n",
+      "ACCESS-ESM1-5       1610700\n",
+      "INM-CM4-8           1609650\n",
+      "INM-CM5-0           1609650\n",
+      "FGOALS-g3           1287720\n",
+      "KIOST-ESM           1287720\n",
+      "AWI-ESM-1-1-LR       966420\n",
+      "MPI-ESM-1-2-HAM      966420\n",
+      "MPI-ESM1-2-LR        966420\n",
+      "NESM3                966420\n",
+      "NorESM2-LM           919800\n",
+      "BCC-ESM1             551880\n",
+      "CanESM5              551880\n",
+      "Name: model, dtype: int64\n",
+      "peak memory: 4461.40 MiB, increment: 2210.06 MiB\n",
+      "Wall time: 1min 50s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "df = pd.read_csv(\"figshareairline/combined_data.csv\")\n",
+    "print(df[\"model\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ahead-cocktail",
+   "metadata": {},
+   "source": [
+    "#### 1.2. Loading in chunk "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "sophisticated-opening",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCESS-CM2          1932840\n",
+      "ACCESS-ESM1-5       1610700\n",
+      "AWI-ESM-1-1-LR       966420\n",
+      "BCC-CSM2-MR         3035340\n",
+      "BCC-ESM1             551880\n",
+      "CMCC-CM2-HR4        3541230\n",
+      "CMCC-CM2-SR5        3541230\n",
+      "CMCC-ESM2           3541230\n",
+      "CanESM5              551880\n",
+      "EC-Earth3-Veg-LR    3037320\n",
+      "FGOALS-f3-L         3219300\n",
+      "FGOALS-g3           1287720\n",
+      "GFDL-CM4            3219300\n",
+      "GFDL-ESM4           3219300\n",
+      "INM-CM4-8           1609650\n",
+      "INM-CM5-0           1609650\n",
+      "KIOST-ESM           1287720\n",
+      "MIROC6              2070900\n",
+      "MPI-ESM-1-2-HAM      966420\n",
+      "MPI-ESM1-2-HR       5154240\n",
+      "MPI-ESM1-2-LR        966420\n",
+      "MRI-ESM2-0          3037320\n",
+      "NESM3                966420\n",
+      "NorESM2-LM           919800\n",
+      "NorESM2-MM          3541230\n",
+      "SAM0-UNICON         3541153\n",
+      "TaiESM1             3541230\n",
+      "dtype: int32\n",
+      "peak memory: 2923.50 MiB, increment: 2158.66 MiB\n",
+      "Wall time: 1min 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "counts = pd.Series(dtype=int)\n",
+    "for chunk in pd.read_csv(\"figshareairline/combined_data.csv\", chunksize=10_000_000):\n",
+    "    counts = counts.add(chunk[\"model\"].value_counts(), fill_value=0)\n",
+    "print(counts.astype(int))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "incoming-complaint",
+   "metadata": {},
+   "source": [
+    "**Comment:** We cut the peak memory in half by loading the data in chunk as compared to loading all data at once. There is also a minor running time savings of 35s."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hollywood-donna",
+   "metadata": {},
+   "source": [
+    "### 2. What is the average rain fall (mm/day) for the respective models\n",
+    "#### 2.1. Classical way - load all to memory (for comparison later)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "short-proxy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model\n",
+      "ACCESS-CM2          1.787025\n",
+      "ACCESS-ESM1-5       2.217501\n",
+      "AWI-ESM-1-1-LR      2.026071\n",
+      "BCC-CSM2-MR         1.951832\n",
+      "BCC-ESM1            1.811032\n",
+      "CMCC-CM2-HR4        2.279350\n",
+      "CMCC-CM2-SR5        2.383389\n",
+      "CMCC-ESM2           2.266125\n",
+      "CanESM5             1.894328\n",
+      "EC-Earth3-Veg-LR    1.516258\n",
+      "FGOALS-f3-L         1.627373\n",
+      "FGOALS-g3           2.156419\n",
+      "GFDL-CM4            1.414485\n",
+      "GFDL-ESM4                NaN\n",
+      "INM-CM4-8           2.811463\n",
+      "INM-CM5-0           2.669012\n",
+      "KIOST-ESM           1.102353\n",
+      "MIROC6              2.301662\n",
+      "MPI-ESM-1-2-HAM     1.610720\n",
+      "MPI-ESM1-2-HR       0.995569\n",
+      "MPI-ESM1-2-LR       1.074308\n",
+      "MRI-ESM2-0          1.368030\n",
+      "NESM3               1.621936\n",
+      "NorESM2-LM          2.230799\n",
+      "NorESM2-MM          2.232966\n",
+      "SAM0-UNICON         2.169676\n",
+      "TaiESM1             2.224576\n",
+      "Name: rain (mm/day), dtype: float64\n",
+      "peak memory: 4531.16 MiB, increment: 3384.70 MiB\n",
+      "Wall time: 2min 17s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "df = pd.read_csv(\"figshareairline/combined_data.csv\")\n",
+    "print(df.groupby(by = ['model']).mean()['rain (mm/day)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "included-mountain",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Only load the columns that we are interested in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "increased-encoding",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model\n",
+      "ACCESS-CM2          1.787025\n",
+      "ACCESS-ESM1-5       2.217501\n",
+      "AWI-ESM-1-1-LR      2.026071\n",
+      "BCC-CSM2-MR         1.951832\n",
+      "BCC-ESM1            1.811032\n",
+      "CMCC-CM2-HR4        2.279350\n",
+      "CMCC-CM2-SR5        2.383389\n",
+      "CMCC-ESM2           2.266125\n",
+      "CanESM5             1.894328\n",
+      "EC-Earth3-Veg-LR    1.516258\n",
+      "FGOALS-f3-L         1.627373\n",
+      "FGOALS-g3           2.156419\n",
+      "GFDL-CM4            1.414485\n",
+      "GFDL-ESM4                NaN\n",
+      "INM-CM4-8           2.811463\n",
+      "INM-CM5-0           2.669012\n",
+      "KIOST-ESM           1.102353\n",
+      "MIROC6              2.301662\n",
+      "MPI-ESM-1-2-HAM     1.610720\n",
+      "MPI-ESM1-2-HR       0.995569\n",
+      "MPI-ESM1-2-LR       1.074308\n",
+      "MRI-ESM2-0          1.368030\n",
+      "NESM3               1.621936\n",
+      "NorESM2-LM          2.230799\n",
+      "NorESM2-MM          2.232966\n",
+      "SAM0-UNICON         2.169676\n",
+      "TaiESM1             2.224576\n",
+      "Name: rain (mm/day), dtype: float64\n",
+      "peak memory: 3982.58 MiB, increment: 983.10 MiB\n",
+      "Wall time: 52.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "use_cols = ['model','rain (mm/day)']\n",
+    "df = pd.read_csv(\"figshareairline/combined_data.csv\", usecols = use_cols)\n",
+    "print(df.groupby(by = ['model']).mean()['rain (mm/day)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dynamic-decrease",
+   "metadata": {},
+   "source": [
+    "#### 2.3 Using dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "positive-apparatus",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model\n",
+      "ACCESS-CM2          1.787025\n",
+      "ACCESS-ESM1-5       2.217501\n",
+      "AWI-ESM-1-1-LR      2.026071\n",
+      "BCC-CSM2-MR         1.951832\n",
+      "BCC-ESM1            1.811032\n",
+      "CMCC-CM2-HR4        2.279350\n",
+      "CMCC-CM2-SR5        2.383389\n",
+      "CMCC-ESM2           2.266125\n",
+      "CanESM5             1.894328\n",
+      "EC-Earth3-Veg-LR    1.516258\n",
+      "FGOALS-f3-L         1.627373\n",
+      "FGOALS-g3           2.156419\n",
+      "GFDL-CM4            1.414485\n",
+      "GFDL-ESM4                NaN\n",
+      "INM-CM4-8           2.811463\n",
+      "INM-CM5-0           2.669012\n",
+      "KIOST-ESM           1.102353\n",
+      "MIROC6              2.301662\n",
+      "MPI-ESM-1-2-HAM     1.610720\n",
+      "MPI-ESM1-2-HR       0.995569\n",
+      "MPI-ESM1-2-LR       1.074308\n",
+      "MRI-ESM2-0          1.368030\n",
+      "NESM3               1.621936\n",
+      "NorESM2-LM          2.230799\n",
+      "NorESM2-MM          2.232966\n",
+      "SAM0-UNICON         2.169676\n",
+      "TaiESM1             2.224576\n",
+      "Name: rain (mm/day), dtype: float64\n",
+      "peak memory: 2571.79 MiB, increment: 1420.54 MiB\n",
+      "Wall time: 5.83 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "import dask.dataframe as dd\n",
+    "\n",
+    "ddf = dd.read_csv('figshareairline/combined_data.csv', )\n",
+    "print(df.groupby(by = ['model']).mean()['rain (mm/day)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "patent-bandwidth",
+   "metadata": {},
+   "source": [
+    "**Comment:** \n",
+    "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 4531.16 MiB in 2.1 to 3982.58 MiB in 2.2. Running time is significantly cut down from 2min 17s to 52.1 s.\n",
+    "\n",
+    "- With dask where chunking and parallel execution are applied automatically for us, we can process the data much faster at 5.83s and it also takes up the least amount of memory during peak usage at 2571.79 MiB, that is only 56.8% of what the traditional Pandas method consumes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "federal-sugar",
+   "metadata": {},
+   "source": [
+    "## D) Transfer datafram from python to R and Perform a simple EDA in R"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decreased-dylan",
+   "id": "beginning-symphony",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -440,7 +784,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.2"
-  }
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
