Update on combined code (removing SVD file)

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "above-illustration",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "faced-crack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "sapphire-blues",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%load_ext rpy2.ipython\n",
     "%load_ext memory_profiler"
@@ -54,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funded-porter",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "political-september",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +62,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "challenging-procurement",
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "little-fabric",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 34.1 s\n"
+      "CPU times: user 4.7 s, sys: 5.51 s, total: 10.2 s\n",
+      "Wall time: 3min 11s\n"
      ]
     }
    ],
@@ -157,14 +142,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "considered-novelty",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 17.8 s\n"
+      "CPU times: user 16.3 s, sys: 2.5 s, total: 18.8 s\n",
+      "Wall time: 21 s\n"
      ]
     }
    ],
@@ -176,7 +161,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-secretary",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -184,30 +168,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "saved-proportion",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "files = glob.glob('figshareairline/*.csv')\n",
-    "if 'figshareairline\\\\combined_data.csv' in (files):\n",
-    "    files.remove('figshareairline\\\\combined_data.csv')\n",
+    "if 'figshareairline/combined_data.csv' or 'figshareairline/observed_daily_rainfall_SYD.csv' in (files):\n",
+    "    files.remove('figshareairline/combined_data.csv')\n",
+    "    files.remove('figshareairline/observed_daily_rainfall_SYD.csv')\n",
     "del files[-3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "written-horror",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 87.02 MiB, increment: 0.26 MiB\n",
-      "Wall time: 8min 21s\n"
+      "peak memory: 283.30 MiB, increment: 0.00 MiB\n",
+      "CPU times: user 6min 18s, sys: 33 s, total: 6min 51s\n",
+      "Wall time: 7min 9s\n"
      ]
     }
    ],
@@ -225,15 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "changed-catch",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.7G\tfigshareairline/combined_data.csv\n"
+      "5.4G\tfigshareairline/combined_data.csv\n"
      ]
     }
    ],
@@ -244,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "technological-imaging",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 44s\n"
+      "CPU times: user 55.7 s, sys: 25.8 s, total: 1min 21s\n",
+      "Wall time: 1min 31s\n"
      ]
     }
    ],
@@ -263,15 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "greek-passing",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(62467843, 7)\n"
+      "(59248543, 7)\n"
      ]
     }
    ],
@@ -281,8 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "weekly-christmas",
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
@@ -321,74 +302,74 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1889-01-01 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>3.293256e-13</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
+       "      <td>-35.439867</td>\n",
+       "      <td>-33.574619</td>\n",
+       "      <td>141.5625</td>\n",
+       "      <td>143.4375</td>\n",
+       "      <td>4.244226e-13</td>\n",
+       "      <td>MPI-ESM-1-2-HAM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1889-01-02 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
+       "      <td>-35.439867</td>\n",
+       "      <td>-33.574619</td>\n",
+       "      <td>141.5625</td>\n",
+       "      <td>143.4375</td>\n",
+       "      <td>4.217326e-13</td>\n",
+       "      <td>MPI-ESM-1-2-HAM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1889-01-03 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
+       "      <td>-35.439867</td>\n",
+       "      <td>-33.574619</td>\n",
+       "      <td>141.5625</td>\n",
+       "      <td>143.4375</td>\n",
+       "      <td>4.498125e-13</td>\n",
+       "      <td>MPI-ESM-1-2-HAM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1889-01-04 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
+       "      <td>-35.439867</td>\n",
+       "      <td>-33.574619</td>\n",
+       "      <td>141.5625</td>\n",
+       "      <td>143.4375</td>\n",
+       "      <td>4.251282e-13</td>\n",
+       "      <td>MPI-ESM-1-2-HAM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1889-01-05 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>1.047658e-02</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
+       "      <td>-35.439867</td>\n",
+       "      <td>-33.574619</td>\n",
+       "      <td>141.5625</td>\n",
+       "      <td>143.4375</td>\n",
+       "      <td>4.270161e-13</td>\n",
+       "      <td>MPI-ESM-1-2-HAM</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  time  lat_min  lat_max  lon_min  lon_max  rain (mm/day)  \\\n",
-       "0  1889-01-01 12:00:00   -36.25    -35.0  140.625    142.5   3.293256e-13   \n",
-       "1  1889-01-02 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "2  1889-01-03 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "3  1889-01-04 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "4  1889-01-05 12:00:00   -36.25    -35.0  140.625    142.5   1.047658e-02   \n",
+       "                  time    lat_min    lat_max   lon_min   lon_max  \\\n",
+       "0  1889-01-01 12:00:00 -35.439867 -33.574619  141.5625  143.4375   \n",
+       "1  1889-01-02 12:00:00 -35.439867 -33.574619  141.5625  143.4375   \n",
+       "2  1889-01-03 12:00:00 -35.439867 -33.574619  141.5625  143.4375   \n",
+       "3  1889-01-04 12:00:00 -35.439867 -33.574619  141.5625  143.4375   \n",
+       "4  1889-01-05 12:00:00 -35.439867 -33.574619  141.5625  143.4375   \n",
        "\n",
-       "        model  \n",
-       "0  ACCESS-CM2  \n",
-       "1  ACCESS-CM2  \n",
-       "2  ACCESS-CM2  \n",
-       "3  ACCESS-CM2  \n",
-       "4  ACCESS-CM2  "
+       "   rain (mm/day)            model  \n",
+       "0   4.244226e-13  MPI-ESM-1-2-HAM  \n",
+       "1   4.217326e-13  MPI-ESM-1-2-HAM  \n",
+       "2   4.498125e-13  MPI-ESM-1-2-HAM  \n",
+       "3   4.251282e-13  MPI-ESM-1-2-HAM  \n",
+       "4   4.270161e-13  MPI-ESM-1-2-HAM  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,23 +380,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smaller-advancement",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
     "\n",
-    "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (Windows 16Gb RAM) |Rahul (Windows 16Gb RAM) \n",
+    "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (macOS Catalina 8Gb RAM) |Rahul (Windows 16Gb RAM) \n",
     "---|---|---|---|---\n",
-    "Download data - wall timne| 34.1s | 12min 38s\n",
-    "Unzip data - wall time| 17.8s| 25.5s \n",
-    "Combine data - wall time| 6min 10s| 8 mins 21s\n",
-    "Combine data - peak memory | 110.30 MiB| 87.02 MiB\n",
-    "Read combined data - wall time | 53.6s | 1min 44s"
+    "Download data - wall timne| 34.1s | 12min 38s | 3min 11s\n",
+    "Unzip data - wall time| 17.8s| 25.5s | 21s\n",
+    "Combine data - wall time| 6min 10s| 8 mins 21s | 7min 9s\n",
+    "Combine data - peak memory | 110.30 MiB| 87.02 MiB| 283.30 MiB\n",
+    "Read combined data - wall time | 53.6s | 1min 44s | 1min 31s"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "rental-gilbert",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -425,7 +404,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-conducting",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -433,7 +411,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "announced-disease",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -442,8 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "massive-investigator",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +427,13 @@
      "output_type": "stream",
      "text": [
       "MPI-ESM1-2-HR       5154240\n",
-      "CMCC-ESM2           3541230\n",
-      "CMCC-CM2-HR4        3541230\n",
-      "TaiESM1             3541230\n",
-      "CMCC-CM2-SR5        3541230\n",
       "NorESM2-MM          3541230\n",
+      "CMCC-CM2-HR4        3541230\n",
+      "CMCC-CM2-SR5        3541230\n",
+      "TaiESM1             3541230\n",
+      "CMCC-ESM2           3541230\n",
       "SAM0-UNICON         3541153\n",
       "FGOALS-f3-L         3219300\n",
-      "GFDL-ESM4           3219300\n",
       "GFDL-CM4            3219300\n",
       "MRI-ESM2-0          3037320\n",
       "EC-Earth3-Veg-LR    3037320\n",
@@ -466,20 +441,21 @@
       "MIROC6              2070900\n",
       "ACCESS-CM2          1932840\n",
       "ACCESS-ESM1-5       1610700\n",
-      "INM-CM4-8           1609650\n",
       "INM-CM5-0           1609650\n",
+      "INM-CM4-8           1609650\n",
       "FGOALS-g3           1287720\n",
       "KIOST-ESM           1287720\n",
-      "AWI-ESM-1-1-LR       966420\n",
-      "MPI-ESM-1-2-HAM      966420\n",
       "MPI-ESM1-2-LR        966420\n",
+      "AWI-ESM-1-1-LR       966420\n",
       "NESM3                966420\n",
+      "MPI-ESM-1-2-HAM      966420\n",
       "NorESM2-LM           919800\n",
       "BCC-ESM1             551880\n",
       "CanESM5              551880\n",
       "Name: model, dtype: int64\n",
-      "peak memory: 4461.40 MiB, increment: 2210.06 MiB\n",
-      "Wall time: 1min 50s\n"
+      "peak memory: 2119.57 MiB, increment: 1179.27 MiB\n",
+      "CPU times: user 58.5 s, sys: 19.1 s, total: 1min 17s\n",
+      "Wall time: 1min 23s\n"
      ]
     }
    ],
@@ -492,7 +468,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ahead-cocktail",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -500,8 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "sophisticated-opening",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +495,6 @@
       "FGOALS-f3-L         3219300\n",
       "FGOALS-g3           1287720\n",
       "GFDL-CM4            3219300\n",
-      "GFDL-ESM4           3219300\n",
       "INM-CM4-8           1609650\n",
       "INM-CM5-0           1609650\n",
       "KIOST-ESM           1287720\n",
@@ -535,9 +508,10 @@
       "NorESM2-MM          3541230\n",
       "SAM0-UNICON         3541153\n",
       "TaiESM1             3541230\n",
-      "dtype: int32\n",
-      "peak memory: 2923.50 MiB, increment: 2158.66 MiB\n",
-      "Wall time: 1min 15s\n"
+      "dtype: int64\n",
+      "peak memory: 1918.27 MiB, increment: 7.45 MiB\n",
+      "CPU times: user 57.6 s, sys: 8.13 s, total: 1min 5s\n",
+      "Wall time: 1min 7s\n"
      ]
     }
    ],
@@ -552,15 +526,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-complaint",
    "metadata": {},
    "source": [
-    "**Comment:** We cut the peak memory in half by loading the data in chunk as compared to loading all data at once. There is also a minor running time savings of 35s."
+    "**Comment:** We cut the peak memory in half by loading the data in chunk as compared to loading all data at once. There is also a minor running time savings of approximately 20-30s. (depends on computer)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-donna",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -569,48 +541,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "short-proxy",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model\n",
-      "ACCESS-CM2          1.787025\n",
-      "ACCESS-ESM1-5       2.217501\n",
-      "AWI-ESM-1-1-LR      2.026071\n",
-      "BCC-CSM2-MR         1.951832\n",
-      "BCC-ESM1            1.811032\n",
-      "CMCC-CM2-HR4        2.279350\n",
-      "CMCC-CM2-SR5        2.383389\n",
-      "CMCC-ESM2           2.266125\n",
-      "CanESM5             1.894328\n",
-      "EC-Earth3-Veg-LR    1.516258\n",
-      "FGOALS-f3-L         1.627373\n",
-      "FGOALS-g3           2.156419\n",
-      "GFDL-CM4            1.414485\n",
-      "GFDL-ESM4                NaN\n",
-      "INM-CM4-8           2.811463\n",
-      "INM-CM5-0           2.669012\n",
-      "KIOST-ESM           1.102353\n",
-      "MIROC6              2.301662\n",
-      "MPI-ESM-1-2-HAM     1.610720\n",
-      "MPI-ESM1-2-HR       0.995569\n",
-      "MPI-ESM1-2-LR       1.074308\n",
-      "MRI-ESM2-0          1.368030\n",
-      "NESM3               1.621936\n",
-      "NorESM2-LM          2.230799\n",
-      "NorESM2-MM          2.232966\n",
-      "SAM0-UNICON         2.169676\n",
-      "TaiESM1             2.224576\n",
-      "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 4531.16 MiB, increment: 3384.70 MiB\n",
-      "Wall time: 2min 17s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "%%memit\n",
@@ -620,7 +553,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "included-mountain",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -629,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "increased-encoding",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +611,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dynamic-decrease",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -689,7 +619,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "positive-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +670,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-bandwidth",
    "metadata": {},
    "source": [
     "**Comment:** \n",
@@ -752,7 +680,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "federal-sugar",
    "metadata": {},
    "source": [
     "## D) Transfer datafram from python to R and Perform a simple EDA in R"
@@ -761,7 +688,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beginning-symphony",
    "metadata": {},
    "outputs": [],
    "source": []
