Update on changes

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -32,9 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The memory_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext memory_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "#%load_ext rpy2.ipython\n",
     "%load_ext memory_profiler"
@@ -541,26 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "%%memit\n",
-    "df = pd.read_csv(\"figshareairline/combined_data.csv\")\n",
-    "print(df.groupby(by = ['model']).mean()['rain (mm/day)'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.2 Only load the columns that we are interested in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +571,6 @@
       "FGOALS-f3-L         1.627373\n",
       "FGOALS-g3           2.156419\n",
       "GFDL-CM4            1.414485\n",
-      "GFDL-ESM4                NaN\n",
       "INM-CM4-8           2.811463\n",
       "INM-CM5-0           2.669012\n",
       "KIOST-ESM           1.102353\n",
@@ -596,8 +585,66 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 3982.58 MiB, increment: 983.10 MiB\n",
-      "Wall time: 52.1 s\n"
+      "peak memory: 3459.66 MiB, increment: 2325.96 MiB\n",
+      "CPU times: user 1min 1s, sys: 33.6 s, total: 1min 35s\n",
+      "Wall time: 1min 48s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "df = pd.read_csv(\"figshareairline/combined_data.csv\")\n",
+    "print(df.groupby(by = ['model']).mean()['rain (mm/day)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Only load the columns that we are interested in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model\n",
+      "ACCESS-CM2          1.787025\n",
+      "ACCESS-ESM1-5       2.217501\n",
+      "AWI-ESM-1-1-LR      2.026071\n",
+      "BCC-CSM2-MR         1.951832\n",
+      "BCC-ESM1            1.811032\n",
+      "CMCC-CM2-HR4        2.279350\n",
+      "CMCC-CM2-SR5        2.383389\n",
+      "CMCC-ESM2           2.266125\n",
+      "CanESM5             1.894328\n",
+      "EC-Earth3-Veg-LR    1.516258\n",
+      "FGOALS-f3-L         1.627373\n",
+      "FGOALS-g3           2.156419\n",
+      "GFDL-CM4            1.414485\n",
+      "INM-CM4-8           2.811463\n",
+      "INM-CM5-0           2.669012\n",
+      "KIOST-ESM           1.102353\n",
+      "MIROC6              2.301662\n",
+      "MPI-ESM-1-2-HAM     1.610720\n",
+      "MPI-ESM1-2-HR       0.995569\n",
+      "MPI-ESM1-2-LR       1.074308\n",
+      "MRI-ESM2-0          1.368030\n",
+      "NESM3               1.621936\n",
+      "NorESM2-LM          2.230799\n",
+      "NorESM2-MM          2.232966\n",
+      "SAM0-UNICON         2.169676\n",
+      "TaiESM1             2.224576\n",
+      "Name: rain (mm/day), dtype: float64\n",
+      "peak memory: 2096.42 MiB, increment: 403.25 MiB\n",
+      "CPU times: user 34.1 s, sys: 7.96 s, total: 42.1 s\n",
+      "Wall time: 45.4 s\n"
      ]
     }
    ],
@@ -618,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +686,6 @@
       "FGOALS-f3-L         1.627373\n",
       "FGOALS-g3           2.156419\n",
       "GFDL-CM4            1.414485\n",
-      "GFDL-ESM4                NaN\n",
       "INM-CM4-8           2.811463\n",
       "INM-CM5-0           2.669012\n",
       "KIOST-ESM           1.102353\n",
@@ -654,8 +700,9 @@
       "SAM0-UNICON         2.169676\n",
       "TaiESM1             2.224576\n",
       "Name: rain (mm/day), dtype: float64\n",
-      "peak memory: 2571.79 MiB, increment: 1420.54 MiB\n",
-      "Wall time: 5.83 s\n"
+      "peak memory: 1933.41 MiB, increment: 922.60 MiB\n",
+      "CPU times: user 3.94 s, sys: 1.16 s, total: 5.11 s\n",
+      "Wall time: 7.5 s\n"
      ]
     }
    ],
@@ -672,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Comment:** \n",
+    "**Comment:** (All results are computer dependent)\n",
     "- By loading only the columns of interest instead of all the columns in the dataframe, we can save peak memory usage from 4531.16 MiB in 2.1 to 3982.58 MiB in 2.2. Running time is significantly cut down from 2min 17s to 52.1 s.\n",
     "\n",
     "- With dask where chunking and parallel execution are applied automatically for us, we can process the data much faster at 5.83s and it also takes up the least amount of memory during peak usage at 2571.79 MiB, that is only 56.8% of what the traditional Pandas method consumes."
