--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%load_ext rpy2.ipython\n",
     "%load_ext memory_profiler"
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +104,7 @@
        "  'size': 4113}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.7 s, sys: 5.51 s, total: 10.2 s\n",
-      "Wall time: 3min 11s\n"
+      "CPU times: user 6.57 s, sys: 7.44 s, total: 14 s\n",
+      "Wall time: 4min 10s\n"
      ]
     }
    ],
@@ -150,15 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.3 s, sys: 2.5 s, total: 18.8 s\n",
-      "Wall time: 21 s\n"
+      "CPU times: user 16.2 s, sys: 2.57 s, total: 18.8 s\n",
+      "Wall time: 21.4 s\n"
      ]
     }
    ],
@@ -177,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,22 +176,21 @@
     "files = glob.glob('figshareairline/*.csv')\n",
     "if 'figshareairline/combined_data.csv' or 'figshareairline/observed_daily_rainfall_SYD.csv' in (files):\n",
     "    files.remove('figshareairline/combined_data.csv')\n",
-    "    files.remove('figshareairline/observed_daily_rainfall_SYD.csv')\n",
-    "del files[-3]"
+    "    files.remove('figshareairline/observed_daily_rainfall_SYD.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 283.30 MiB, increment: 0.00 MiB\n",
-      "CPU times: user 6min 18s, sys: 33 s, total: 6min 51s\n",
-      "Wall time: 7min 9s\n"
+      "peak memory: 78.52 MiB, increment: 1.42 MiB\n",
+      "CPU times: user 6min 24s, sys: 32.9 s, total: 6min 57s\n",
+      "Wall time: 7min 14s\n"
      ]
     }
    ],
@@ -218,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.4G\tfigshareairline/combined_data.csv\n"
+      "5.6G\tfigshareairline/combined_data.csv\n"
      ]
     }
    ],
@@ -236,15 +226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 55.7 s, sys: 25.8 s, total: 1min 21s\n",
-      "Wall time: 1min 31s\n"
+      "CPU times: user 57.5 s, sys: 22.8 s, total: 1min 20s\n",
+      "Wall time: 1min 29s\n"
      ]
     }
    ],
@@ -255,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(59248543, 7)\n"
+      "(62467843, 7)\n"
      ]
     }
    ],
@@ -395,11 +385,11 @@
     "\n",
     "Machine | Peter (Windows 16Gb RAM) |Alex (Windows 8Gb RAM) |Joshua (macOS Catalina 8Gb RAM) |Rahul (Windows 16Gb RAM) \n",
     "---|---|---|---|---\n",
-    "Download data - wall timne| 34.1s | 12min 38s | 3min 11s\n",
-    "Unzip data - wall time| 17.8s| 25.5s | 21s\n",
-    "Combine data - wall time| 6min 10s| 8 mins 21s | 7min 9s\n",
-    "Combine data - peak memory | 110.30 MiB| 87.02 MiB| 283.30 MiB\n",
-    "Read combined data - wall time | 53.6s | 1min 44s | 1min 31s"
+    "Download data - wall timne| 34.1s | 12min 38s | 4min 10s\n",
+    "Unzip data - wall time| 17.8s| 25.5s | 21.4 s\n",
+    "Combine data - wall time| 6min 10s| 8 mins 21s | 7min 14s\n",
+    "Combine data - peak memory | 110.30 MiB| 87.02 MiB| 78.52 MiB\n",
+    "Read combined data - wall time | 53.6s | 1min 44s | 1min 29s"
    ]
   },
   {
